# conversations

./: .codespellrc  .dockerignore  .env  .gitignore  .grype.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  compose-e2e.yml  compose.with_model.override.yml  compose.yml  conversations-0.0.1.tgz  conversations-0.0.2.tgz  conversations-0.0.3.tgz  conversations-0.0.4.tgz  conversations-0.0.5.tgz  conversations-0.0.6.tgz  conversations-0.0.7.tgz  conversations-0.0.8.tgz  conversations-0.0.9.tgz  index.yaml  package.json  renovate.json
src/backend/: .pylintrc  MANIFEST.in  conftest.py  manage.py  pyproject.toml  setup.py
src/backend/activation_codes/: admin.py  exceptions.py  factories.py  models.py  permissions.py  serializers.py  viewsets.py
src/backend/activation_codes/migrations/: 0001_initial.py
src/backend/activation_codes/tests/: test_integration.py  test_models.py  test_permissions.py  test_serializers.py  test_viewsets.py
src/backend/chat/: admin.py  ai_sdk_types.py  apps.py  assistant_health.py  authentication.py  citation_attribution.py  constants.py  docs_client.py  document_context_builder.py  document_storage.py  enums.py  exceptions.py  factories.py  keepalive.py  llm_configuration.py  malware_detection.py  mcp_servers.py  model_health.py  model_routing.py  models.py  prompt_sync.py  prompts.py  rate_limiting.py  serializers.py  tasks.py  tokens.py  tools.py  transcription.py  views.py  webhook_models.py
src/backend/chat/agent_rag/: albert_api_constants.py  collection_manager.py  constants.py  indexing.py  rag_collections.py
src/backend/chat/agents/: base.py  conversation.py  history_processors.py  image_url_processors.py  json_schema_converters.py  local_media_url_processors.py  routing.py  summarize.py  translate.py
src/backend/chat/clients/: agent.py  async_to_sync.py  conversation_reindexer.py  error_classification.py  exceptions.py  langchain.py  openai.py  pydantic_ai.py  pydantic_ui_message_converter.py  schema.py
src/backend/chat/evals/: README.md  __init__.py  compare.py  dashboard.py  production_agent.py  report_builder.py  storage.py  tool_output.py  tool_stub_responses.py
src/backend/chat/input/: albert_audio_backend.py  base_audio_backend.py
src/backend/chat/meta_docs/: self_documentation.json
src/backend/chat/migrations/: 0001_initial.py  0002_fix_source_type_in_messages.py  0002_initial.py  0003_alter_chatconversation_messages.py  0003_chatconversationcontext.py  0004_chatconversation_collection_id.py  0004_chatconversationattachment_and_more.py  0005_chatconversation_title_set_by_user_at.py  0005_prompt.py  0006_chatproject_chatconversation_project.py  0007_chatconversation_history_summary.py  0007_chatconversation_indexes.py  0007_chatconversationattachment_project_and_more.py  0007_chatconversationattachment_transcription_job_id.py  0007_collection_collectiondocument_and_more.py  0008_chatconversation_history_summary.py  0008_chatconversation_index_state_and_more.py  0008_migrate_collection_id_to_collection.py  0008_modelhealth.py  0009_chatconversation_history_summary_checkpoint.py  0009_chatconversation_index_state_and_more.py  0009_chatconversationattachment_project_and_more.py  0010_alter_modelhealth_status.py  0011_chatconversation_model_hrid.py  0012_chatconversation_history_summary.py  0012_chatconversation_history_summary_and_more.py  0012_chatconversationattachment_index_state_and_more.py  0013_alter_chatconversationattachment_index_state.py  0013_chatconversation_history_summary_and_more.py  0013_chatconversation_history_summary_checkpoint.py
src/backend/chat/providers/: albert_models.py
src/backend/chat/tests/: __init__.py  conftest.py  test_admin.py  test_ai_agent_service_co2.py  test_assistant_health.py  test_citation_attribution.py  test_docs_client.py  test_document_context_builder.py  test_llm_configuration.py  test_local_media_url_processors.py  test_malware_detection.py  test_model_health.py  test_model_routing.py  test_models_history_summary_claim.py  test_rate_limiting.py  test_settings_isolation.py  test_tasks.py  test_transcription.py  utils.py
src/backend/chat/tools/: __init__.py  data_analysis.py  descriptions.py  document_generic_search_rag.py  document_search_albert_rag.py  document_search_rag.py  document_summarize.py  document_translate.py  exceptions.py  fake_current_weather.py  fetch_url.py  self_documentation.py  service_public.py  url_fetch.py  utils.py  web_seach_albert_rag.py  web_search_brave.py  web_search_staan.py  web_search_tavily.py
src/backend/chat/views/: __init__.py  attachments.py  conversations.py  edit_in_docs.py  files.py  filters.py  health.py  helpers.py  llm_config.py  model_health.py  projects.py  tool_progress.py
src/backend/conversations/: __init__.py  asgi.py  brave_settings.py  celery_app.py  settings.py  staan_settings.py  url_fetch_settings.py  urls.py  wsgi.py
src/backend/conversations/tests/: test_settings_docs.py  test_settings_llm_configurations.py  test_settings_oidc_refresh_token_key.py
src/backend/core/: admin.py  apps.py  brevo.py  enums.py  factories.py  filters.py  middleware.py  models.py  permissions.py  posthog.py  tasks.py  urls.py
src/backend/core/api/: __init__.py  serializers.py  viewsets.py
src/backend/core/authentication/: __init__.py  backends.py  views.py
src/backend/core/feature_flags/: flags.py  helpers.py
src/backend/core/file_upload/: enums.py  exceptions.py  malware_detection.py  mixins.py  serializers.py  utils.py
src/backend/core/migrations/: 0001_initial.py  0002_user_allow_conversation_analytics.py  0003_alter_user_short_name.py  0004_siteconfiguration.py  0004_user_allow_smart_web_search.py  0005_siteconfiguration.py  0006_user_allow_smart_web_search_default_false.py  0007_siteconfiguration_status_banner_content_and_more.py  0008_maintenancemode.py  0008_modelhealthsettings.py  0009_modelhealthsettings.py  0010_alter_maintenancemode_updated_by.py  0012_chatcooldownsettings.py  (+3 more)
src/backend/demo/: defaults.py
src/backend/evaluation/: views.py
src/backend/utils/: oicd.py  oidc.py
(+642 files in other folders)
