#
# conversations package
#
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "conversations"
version = "0.0.13"
authors = [{ "name" = "DINUM", "email" = "dev@mail.numerique.gouv.fr" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Django :: 5",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
description = "An application to chat with your own AI."
keywords = ["Django", "AI", "Chatbot", "OpenAI", "Pydantic AI", "Conversations"]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = "~=3.13.0"
dependencies = [
    "deprecated",
    "beautifulsoup4==4.14.2",
    "boto3==1.40.73",
    "Brotli==1.2.0",
    "django-configurations==2.5.1",
    "django-cors-headers==4.9.0",
    "django-countries==8.1.0",
    "django-filter==25.2",
    "django-lasuite[all]==0.0.18",
    "django-parler==2.3",
    "django-pydantic-field==0.4.0",
    "django-redis==6.0.0",
    "django-storages[s3]==1.14.6",
    "django-timezone-field>=5.1",
    "django==5.2.11",
    "djangorestframework==3.16.1",
    "drf_spectacular==0.29.0",
    "dockerflow==2024.4.2",
    "easy_thumbnails==2.10.1",
    "factory_boy==3.3.3",
    "gunicorn==23.0.0",
    "jaraco.context>=6.1.0",
    "jsonschema==4.25.1",
    "langfuse==3.10.0",
    "lxml==5.4.0",
    "markdown==3.10",
    "markitdown==0.0.2",
    "mozilla-django-oidc==4.0.1",
    "nested-multipart-parser==1.6.0",
    "posthog==7.0.0",
    "pydantic==2.12.4",
    "pydantic-ai-slim[openai,mistral,mcp,evals,logfire]==1.17.0",
    "psycopg[binary]==3.2.12",
    "PyJWT==2.10.1",
    "python-magic==0.4.27",
    "redis<6.0.0",
    "requests==2.32.5",
    "semchunk==3.2.5",
    "sentry-sdk==2.44.0",
    "trafilatura==2.0.0",
    "uvicorn==0.38.0",
    "whitenoise==6.11.0",
    "pypdf>=6.6.2",
]

[project.urls]
"Bug Tracker" = "https://github.com/numerique-gouv/conversations/issues/new"
"Changelog" = "https://github.com/numerique-gouv/conversations/blob/main/CHANGELOG.md"
"Homepage" = "https://github.com/numerique-gouv/conversations"
"Repository" = "https://github.com/numerique-gouv/conversations"

[project.optional-dependencies]
dev = [
    "dirty-equals==0.10.0",
    "django-extensions==4.1",
    "django-test-migrations==1.5.0",
    "drf-spectacular-sidecar==2025.10.1",
    "freezegun==1.5.5",
    "ipdb==0.13.13",
    "ipython==9.7.0",
    "pyfakefs==5.10.2",
    "pylint-django==2.6.1",
    "pylint==3.3.9",
    "pylint-pydantic==0.4.1",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "pytest-django==4.11.1",
    "pytest==9.0.1",
    "pytest-icdiff==0.9",
    "pytest-xdist==3.8.0",
    "responses==0.25.8",
    "respx==0.22.0",
    "ruff==0.14.5",
    "types-requests==2.32.4.20250913",
]

[tool.setuptools]
packages = { find = { where = ["."], exclude = ["tests"] } }
zip-safe = true

[tool.distutils.bdist_wheel]
universal = true

[tool.uv.build-backend]
module-root = ""
source-exclude = [
    "**/tests/**",
    "**/test_*.py",
    "**/tests.py",
]

[tool.ruff]
exclude = [
    ".git",
    ".venv",
    "build",
    "venv",
    "__pycache__",
]
line-length = 100


[tool.ruff.lint]
ignore = ["DJ001", "PLR2004"]
select = [
    "B", # flake8-bugbear
    "BLE", # flake8-blind-except
    "C4", # flake8-comprehensions
    "DJ", # flake8-django
    "I", # isort
    "PLC", # pylint-convention
    "PLE", # pylint-error
    "PLR", # pylint-refactoring
    "PLW", # pylint-warning
    "RUF100", # Ruff unused-noqa
    "RUF200", # Ruff check pyproject.toml
    "S", # flake8-bandit
    "SLF", # flake8-self
    "T20", # flake8-print
]

[tool.ruff.lint.isort]
section-order = ["future","standard-library","django","third-party","conversations","first-party","local-folder"]
sections = { conversations=["core"], django=["django"] }
extra-standard-library = ["tomllib"]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["S", "SLF"]

[tool.pytest.ini_options]
addopts = [
    "-v",
    "--cov-report",
    "term-missing",
    # Allow test files to have the same name in different directories.
    "--import-mode=importlib",
]
python_files = [
    "test_*.py",
    "tests.py",
]
