#
# conversations package
#
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "conversations"
version = "0.0.15"
authors = [{ "name" = "DINUM", "email" = "dev@mail.numerique.gouv.fr" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Django :: 5",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
description = "An application to chat with your own AI."
keywords = ["Django", "AI", "Chatbot", "OpenAI", "Pydantic AI", "Conversations"]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = "~=3.14.4"
dependencies = [
    "deprecated",
    "beautifulsoup4==4.14.3",
    "boto3==1.42.91",
    "Brotli==1.2.0",
    "django-configurations==2.5.1",
    "django-cors-headers==4.9.0",
    "django-countries==8.2.0",
    "django-filter==25.2",
    "django-lasuite[all]==0.0.26",
    "django-parler==2.3",
    "django-pydantic-field==0.5.4",
    "django-redis==6.0.0",
    "django-storages[s3]==1.14.6",
    "django-timezone-field>=5.1",
    "django==6.0.4",
    "djangorestframework==3.17.1",
    "drf_spectacular==0.29.0",
    "dockerflow==2026.3.4",
    "easy_thumbnails==2.10.1",
    "factory_boy==3.3.3",
    "gunicorn==25.3.0",
    "jaraco.context>=6.1.0",
    "jsonschema==4.26.0",
    "langfuse==4.3.1",
    "lxml==5.4.0",
    "markdown==3.10.2",
    "markitdown==0.0.2",
    "mozilla-django-oidc==5.0.2",
    "nested-multipart-parser==1.6.0",
    "posthog==7.12.0",
    "pydantic==2.13.2",
    "pydantic-ai-slim[openai,mistral,mcp,evals,logfire]==1.84.1",
    "psycopg[binary]==3.3.3",
    "PyJWT==2.12.1",
    "python-magic==0.4.27",
    "redis<6.0.0",
    "requests==2.33.1",
    "semchunk==4.0.0",
    "sentry-sdk==2.58.0",
    "trafilatura==2.0.0",
    "uvicorn==0.44.0",
    "whitenoise==6.12.0",
    "pypdf==6.10.0",
    "odfdo==3.22.6",
]

[project.urls]
"Bug Tracker" = "https://github.com/numerique-gouv/conversations/issues/new"
"Changelog" = "https://github.com/numerique-gouv/conversations/blob/main/CHANGELOG.md"
"Homepage" = "https://github.com/numerique-gouv/conversations"
"Repository" = "https://github.com/numerique-gouv/conversations"

[project.optional-dependencies]
dev = [
    "dirty-equals==0.11",
    "django-extensions==4.1",
    "django-test-migrations==1.5.0",
    "drf-spectacular-sidecar==2026.4.14",
    "freezegun==1.5.5",
    "ipdb==0.13.13",
    "ipython==9.12.0",
    "pyfakefs==6.2.0",
    "pylint-django==2.7.0",
    "pylint==3.3.9",
    "pylint-pydantic==0.4.1",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
    "pytest-django==4.12.0",
    "pytest==9.0.3",
    "pytest-icdiff==0.9",
    "pytest-xdist==3.8.0",
    "responses==0.26.0",
    "respx==0.23.1",
    "ruff==0.15.11",
    "types-requests==2.33.0.20260408",
    "debugpy>=1.8.20",    
]

[tool.setuptools]
packages = { find = { where = ["."], exclude = ["tests"] } }
zip-safe = true

[tool.distutils.bdist_wheel]
universal = true

[tool.uv]
exclude-newer = "7 days"
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin'",
]
override-dependencies = [
    "cryptography>=46.0.5", # CVE-2026-26007
    "joserfc>=1.6.3", # CVE-2026-27932
    "pillow>=12.2.0", #CVE-2026-40192
]

[tool.uv.build-backend]
module-root = ""
source-exclude = [
    "**/tests/**",
    "**/test_*.py",
    "**/tests.py",
]

[tool.ruff]
exclude = [
    ".git",
    ".venv",
    "build",
    "venv",
    "__pycache__",
]
line-length = 100


[tool.ruff.lint]
ignore = ["DJ001", "PLR2004"]
select = [
    "B", # flake8-bugbear
    "BLE", # flake8-blind-except
    "C4", # flake8-comprehensions
    "DJ", # flake8-django
    "I", # isort
    "PLC", # pylint-convention
    "PLE", # pylint-error
    "PLR", # pylint-refactoring
    "PLW", # pylint-warning
    "RUF100", # Ruff unused-noqa
    "RUF200", # Ruff check pyproject.toml
    "S", # flake8-bandit
    "SLF", # flake8-self
    "T20", # flake8-print
]

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "django", "third-party", "conversations", "first-party", "local-folder"]
sections = { conversations = ["core"], django = ["django"] }
extra-standard-library = ["tomllib"]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["S", "SLF"]

[tool.pytest.ini_options]
addopts = [
    "-v",
    "--cov-report",
    "term-missing",
    # Allow test files to have the same name in different directories.
    "--import-mode=importlib",
]
python_files = [
    "test_*.py",
    "tests.py",
]

