#
# conversations package
#
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "conversations"
version = "0.0.19"
authors = [{ "name" = "DINUM", "email" = "dev@mail.numerique.gouv.fr" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Django :: 5",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]
description = "An application to chat with your own AI."
keywords = ["Django", "AI", "Chatbot", "OpenAI", "Pydantic AI", "Conversations"]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = "~=3.14.6"
dependencies = [
    "beautifulsoup4==4.15.0",
    "boto3==1.43.46",
    "Brotli==1.2.0",
    "celery[redis]==5.6.3",
    "django-configurations==2.5.1",
    "django-cors-headers==4.9.0",
    "django-filter==26.1",
    "django-lasuite[all]==0.0.27",
    "django-pydantic-field==0.5.4",
    "django-redis==7.0.0",
    "django-storages[s3]==1.14.6",
    "django-timezone-field>=5.1",
    "django==6.0.7",
    "djangorestframework==3.17.1",
    "drf_spectacular==0.30.0",
    "dockerflow==2026.3.4",
    "factory_boy==3.3.3",
    "gunicorn==26.0.0",
    "jsonschema==4.26.0",
    "langfuse==4.14.0",
    "lxml==6.1.1",
    "markdown==3.10.2",
    "markitdown==0.0.2",
    "mozilla-django-oidc==5.0.2",
    "nested-multipart-parser==1.6.0",
    "posthog==7.22.1",
    "pydantic==2.13.4",
    "pydantic-ai-slim[openai,mistral,mcp,evals,logfire]==2.9.0",
    "psycopg[binary]==3.3.4",
    "PyJWT==2.13.0",
    "python-magic==0.4.27",
    "redis<6.0.0",
    "requests==2.34.2",
    "semchunk==4.1.1",
    "sentry-sdk==2.64.0",
    "trafilatura==2.1.0",
    "uvicorn==0.51.0",
    "whitenoise==6.12.0",
    "pypdf==6.14.2",
    "odfdo==3.22.11",
    "django-solo==2.5.1",
    "tiktoken==0.13.0",
]

[project.urls]
"Bug Tracker" = "https://github.com/numerique-gouv/conversations/issues/new"
"Changelog" = "https://github.com/numerique-gouv/conversations/blob/main/CHANGELOG.md"
"Homepage" = "https://github.com/numerique-gouv/conversations"
"Repository" = "https://github.com/numerique-gouv/conversations"

[project.optional-dependencies]
dev = [
    "dirty-equals==0.11",
    "django-extensions==4.1",
    "django-test-migrations==1.5.0",
    "drf-spectacular-sidecar==2026.7.1",
    "freezegun==1.5.5",
    "ipdb==0.13.13",
    "ipython==9.15.0",
    "pyfakefs==6.2.0",
    "pylint-django==2.8.0",
    "pylint==4.0.5",
    "pylint-pydantic==0.4.1",
    "pytest-asyncio==1.4.0",
    "pytest-cov==7.1.0",
    "pytest-django==4.12.0",
    "pytest-dotenv==0.5.2",
    "pytest==9.1.1",
    "pytest-icdiff==0.9",
    "pytest-xdist==3.8.0",
    "responses==0.26.2",
    "respx==0.23.1",
    "ruff==0.15.21",
    "types-requests==2.33.0.20260712",
    "debugpy>=1.8.20",
]

[tool.setuptools]
packages = { find = { where = ["."], exclude = ["tests"] } }
zip-safe = true

[tool.distutils.bdist_wheel]
universal = true

[tool.uv]
exclude-newer = "7 days"
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin'",
]
override-dependencies = [
    "cryptography>=48.0.1", # GHSA-537c-gmf6-5ccf
    "joserfc>=1.6.8", # CVE-2026-49852
    "pillow>=12.2.0", #CVE-2026-40192
    "python-multipart>=0.0.31", # CVE-2026-53539
    "starlette>=1.3.1", # CVE-2026-48818, CVE-2026-54283,
    "pyjwt>=2.13.0", #CVE-2026-48526
]

[tool.uv.build-backend]
module-root = ""
source-exclude = [
    "**/tests/**",
    "**/test_*.py",
    "**/tests.py",
]

[tool.ruff]
exclude = [
    ".git",
    ".venv",
    "build",
    "venv",
    "__pycache__",
]
line-length = 100


[tool.ruff.lint]
ignore = ["DJ001", "PLR2004"]
select = [
    "B", # flake8-bugbear
    "BLE", # flake8-blind-except
    "C4", # flake8-comprehensions
    "DJ", # flake8-django
    "I", # isort
    "PLC", # pylint-convention
    "PLE", # pylint-error
    "PLR", # pylint-refactoring
    "PLW", # pylint-warning
    "RUF100", # Ruff unused-noqa
    "RUF200", # Ruff check pyproject.toml
    "S", # flake8-bandit
    "SLF", # flake8-self
    "T20", # flake8-print
]

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "django", "third-party", "conversations", "first-party", "local-folder"]
sections = { conversations = ["core"], django = ["django"] }
extra-standard-library = ["tomllib"]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["S", "SLF"]

[tool.pytest.ini_options]
addopts = [
    "-v",
    "--cov-report",
    "term-missing",
    # Allow test files to have the same name in different directories.
    "--import-mode=importlib",
]
python_files = [
    "test_*.py",
    "tests.py",
]
# For host-run pytest and CI (docker uses the app-test service env_file instead),
# load the dedicated, deterministic test environment. env.d/test carries the
# behavior settings; the repo-root .env carries host infra topology (DB/S3 ports).
# Existing process env is never overridden, so the CI job env (localhost/5432)
# wins over .env's host ports (localhost/15432).
env_files = [
    "env.d/test",
    ".env",
]